@@ -48,7 +48,6 @@ import org.wso2.carbon.user.core.service.RealmService;
 import org.wso2.carbon.utils.CarbonUtils;
 import org.wso2.carbon.utils.ConfigurationContextService;
 import org.wso2.carbon.utils.NetworkUtils;
-
 import java.io.File;
 import java.net.InetAddress;
 import java.net.SocketException;
@@ -235,8 +234,10 @@ public class EntitlementServiceComponent {
 
                 boolean customPolicies = false;
 
-                if (policyFolder != null && policyFolder.exists()) {
-                    for (File policyFile : policyFolder.listFiles()) {
+                File[] fileList;
+                if (policyFolder != null && policyFolder.exists()
+                        && ArrayUtils.isNotEmpty(fileList = policyFolder.listFiles())) {
+                    for (File policyFile : fileList) {
                         if (policyFile.isFile()) {
                             PolicyDTO policyDTO = new PolicyDTO();
                             policyDTO.setPolicy(FileUtils.readFileToString(policyFile));
@@ -250,7 +251,6 @@ public class EntitlementServiceComponent {
                                 }
                             }
                             customPolicies = true;
-
                         }
                     }
                 }
@@ -464,7 +464,7 @@ public class EntitlementServiceComponent {
                 byte[] byteAddress = new byte[4];
                 for (int i = 0; i < splittedString.length; i++) {
                     if (Integer.parseInt(splittedString[i]) > 127) {
-                        byteAddress[i] = new Integer(Integer.parseInt(splittedString[i]) - 256).byteValue();
+                        byteAddress[i] = Integer.valueOf(Integer.parseInt(splittedString[i]) - 256).byteValue();
                     } else {
                         byteAddress[i] = Byte.parseByte(splittedString[i]);
                     }
